# strategy_search

./: .gitattributes  .gitignore  CHANGELOG.md  CLEAN_PACKAGE_SUMMARY.json  DEFECT_INJECTION_TEST_REPORT.md  ENGINEERING_STRUCTURE_STAGE3.md  README.md  STAGE2A_SEARCH_STABILITY.md  STAGE2B_BEAM_SEARCH_STABILITY.md  STAGE2C_SEARCH_QUALITY_AUDIT.md  TESTING.md  V3_0_INTEGRATION_NOTES.md  VERSION  auto_strategy_search.py  cost_model_design_formula_explained.md  cost_model_design_formula_explained.tex  cost_model_design_formula_explained_pycharm_plain.md  cost_model_hyperparameters_training_data.md  cost_model_hyperparameters_training_data_pycharm.md  optional_profiles_README.md  pytest.ini
configs/: ascend_910b.json  ascend_910b3_hypothetical.json  cost_model_aggressive.json  cost_model_balanced.json  cost_model_conservative.json  cost_model_e2e_initial_calibrated.json  cost_model_e2e_prefill_merged.json  cost_model_prefill_a5_plan_calibrated.json  search_space_demo.json
docs/: 00_DOCUMENTATION_INDEX_CN.md
hivm_bridge_adapter/: HivmStrategyEditScript.h  README.md
optional_profiles/: prefill_des.json
output_v331_artifact/: artifact_profile.json  buffer_life_report.json  cost_breakdown.json  cost_calibration_report.json  cost_model_audit.json  diagnosis_guidance_report.json  effective_search_space.json  hardware_boundary_audit.json  kernel_cost_profile.json  layer1_rejected_candidates.json  parameter_space_audit.json  rejected_candidates.json  search_audit.json  search_report.json  selected_plan.json  selected_strategy.json  strategy_search_report.html  strategy_search_report.md  top_candidates.json  top_plans.json
sample_input/: _roundtrip_test.hivm.mlir  _test_output.hivm.mlir  chunk_kernel.npuir.mlir  fa_bad_inefficient.hivm.mlir
scripts/: build_artifact_des_summary.py  build_des_profile_summary.py  (+84 more)
vtriton_adapter/: CMakeLists.txt  HivmLegalityCheck.h  README.md  hivm_strategy_rewrite.cpp
vtriton_hivm_operation_backend/: CMakeLists.txt  README.md  hivm_operation_backend.cpp  vtriton_integration_patch.diff
(+870 files in other folders)
